# vui

./: .gitignore  .pre-commit-config.yaml  LICENSE  demo.py  inference.ipynb  inference.py  pyproject.toml  readme.md
src/vui/: fluac.py  inference.py  model.py  patterns.py  rope.py  sampling.py  tok.py  utils.py  vad.py
