[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vui"
description = "Voice user interfaces"
dynamic = ["version"]

requires-python = "==3.12.3"

dependencies = [
    "einops==0.8.1",
    "inflect==7.5.0",
    "gradio==5.33.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "openai-whisper",
    "pydantic==2.11.5",
    "pyannote.audio==3.3.2",
    "soundfile==0.13.1",
    "tiktoken==0.9.0",
    "torch==2.7.1",
    "torchaudio",
    "transformers==4.52.4",
]

[tool.setuptools.packages.find]
where = ["src"]
