[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vui"
description = "Voice user interfaces"
dynamic = ["version"]

requires-python = "==3.12.3"

dependencies = [
    "einops==0.8.1",
    "inflect==7.5.0",
    "gradio==5.33.0",
    "numba==0.61.2",
    "numpy>=1.24.0",
    "openai-whisper>=20231117",
    "pydantic==2.11.5",
    "pyannote.audio==3.3.2",
    "soundfile==0.13.1",
    "tiktoken==0.9.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.52.4",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
ignore-error-codes = [403]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.setuptools.packages.find]
where = ["src"]
